[project]
name = "oasis-deconv"
version = "0.2.0"
description = "Fast algorithm for deconvolution of neural calcium imaging traces"
authors = [
    {name="Johannes Friedrich", email="johannes.friedrich@alleninstitute.org"},
]
readme = "README.md"
requires-python = ">=3.7, <=3.13"
dependencies = [
    'numpy > 2',
    'scipy',
    'matplotlib',
]

[project.optional-dependencies]
comparison = [
    'cvxpy>=0.3.6',
    'ecos'
    ]
build = [
    'setuptools',
    'Cython',
    'numpy > 2'
]

[build-system]
requires = ['setuptools', 'Cython', 'numpy > 2']
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
oasis = ["*.pyx"]
